# ESP32S2_SERVER

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_nvs.c  device_registry.c  espnow_manager.c  factory_reset.c  idf_component.yml  internal_device.c  main.c  mqtt_bridge.c  mqtt_manager.c  rc_model_json.c  usb_cdc_init.c  web_portal.c  wifi_manager.c
main/include/: app_nvs.h  device_registry.h  espnow_manager.h  factory_reset.h  internal_device.h  internal_profile.h  mqtt_bridge.h  mqtt_manager.h  rc_model.h  rc_model_json.h  usb_cdc_init.h  web_portal.h  wifi_manager.h
main/web/: app.js  index.html  style.css
